[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
axum = { version = "0.7.4", features = ["macros"] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
bincode = "1.3.3"
cargo-manifest = "0.17.0"
leaky-bucket = "1.1.2"
mime = "0.3.17"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
tokio = "1.28.2"
toml = "0.8.19"
